# Modern-CPP-Solved

./: README.md
HW1/: rand.cpp
HW2/igg_image/src/: CMakeLists.txt
HW2/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
HW3/igg_image/src/igg_image/: CMakeLists.txt  image.cpp  image.h  main.cpp
HW3/igg_image/src/igg_image/io_strategies/: CMakeLists.txt  ppm_strategy.cpp  ppm_strategy.h
HW4/digit_counter/: CMakeLists.txt
HW4/digit_counter/include/: digit_counting.h
HW4/digit_counter/src/: CMakeLists.txt
HW4/digit_counter/src/digit_counter/: CMakeLists.txt  digit_counting.cpp  main.cpp
HW4/digit_counter/tests/: CMakeLists.txt
HW4/igg_image/src/igg_image/: image.cpp  image.h  main.cpp
HW4/stack_limit/: stack_limit.cpp
