#add_library(strategies png_strategy.cpp dummy_strategy.cpp)
            # TODO: Add other files here when needed.
#find_package(PNG REQUIRED)
# TODO: link strategies against needed libraries.
#find_library(IMAGE NAMES image PATHS ${LIBRARY_OUTPUT_PATH})

#add_executable(main main.cpp)

#target_link_libraries(main strategies ${IMAGE} ${PNG_LIBRARIES})
